--- a/Month-2/phone-companion/public/index.html
+++ b/Month-2/phone-companion/public/index.html
@@ -22,5 +22,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://unpkg.com/vue/dist/vue.js"></script>
+  <script src="https://unpkg.com/vue2-smooth-scroll"></script>
   </body>
 </html>
